[gd_scene load_steps=6 format=3 uid="uid://cw6w20chfrgev"]

[ext_resource type="Script" path="res://entities/player/health_bar/player_health_bar.gd" id="1_ghbpr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uxka0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bad01"]
bg_color = Color(0.288615, 0.696691, 0.406897, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cut7m"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 0.588235)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ucky"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="HealthBar" type="ProgressBar"]
custom_minimum_size = Vector2(200, 30)
size_flags_horizontal = 8
theme_override_styles/background = SubResource("StyleBoxEmpty_uxka0")
theme_override_styles/fill = SubResource("StyleBoxFlat_bad01")
max_value = 20.0
value = 10.0
show_percentage = false
script = ExtResource("1_ghbpr")

[node name="DamageBar" type="ProgressBar" parent="."]
z_index = -1
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
offset_right = 200.0
offset_bottom = 30.0
size_flags_horizontal = 8
theme_override_styles/background = SubResource("StyleBoxFlat_cut7m")
theme_override_styles/fill = SubResource("StyleBoxFlat_2ucky")
max_value = 20.0
value = 14.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
